--- a/userContent.css
+++ b/userContent.css
@@ -1,5 +1,78 @@
 /* ----- ᗪ卂尺Ҝ爪卂ㄒㄒ乇尺  乃ㄚ  乃ㄥㄖㄖᗪㄚ卄乇ㄥㄥϬ𝟙९ ----- */
 
+.top-sites-list:not(.dnd-active) .top-site-outer:is(.active, :focus, :hover) {
+    background: #202020 !important;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 0 0 1px #4040405c inset !important;
+}
+
+.context-menu > ul {
+    background-color: #222 !important;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 0 0 1px #4040405c inset !important;
+    border-radius: 3px !important;
+}
+
+.context-menu > ul > li.separator {
+    border-color: #282828 !important;
+}
+
+.top-site-outer .context-menu-button:hover {
+    fill: #10B2E7 !important;
+}
+
+.top-site-outer .context-menu-button {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 0 0 1px #4040405c inset !important;
+    margin-right: -7px !important;
+    margin-top: -5px !important;
+    margin-left: 4px !important;
+    padding-left: 100px !important;
+    padding-right: 20px !important;
+}
+
+.top-site-outer .tile {
+    background-color: #222 !important;
+}
+
+.top-site-outer .title span {
+    margin-top: -3px !important;
+    padding-top: 4px !important;
+    padding-bottom: 8px !important;
+    margin-bottom: -29px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    margin-left: -16px !important;
+    margin-right: -16px !important;
+    border-radius: 3px !important;
+    padding-top: 4px !important;
+}
+
+.top-site-outer:hover .title span {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 0 0 1px #4040405c inset !important;
+    margin-top: -3px !important;
+    padding-top: 4px !important;
+    padding-bottom: 8px !important;
+    margin-bottom: -29px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    margin-left: -16px !important;
+    margin-right: -16px !important;
+    border-radius: 3px !important;
+    padding-top: 4px !important;
+}
+
+.top-site-outer:hover {
+    padding-bottom: 30px !important;
+    padding-top: 26px !important;
+}
+
+.top-site-outer {
+    padding-bottom: 30px !important;
+    padding-top: 26px !important;
+}
+
+top-site-outer .top-site-icon {
+    background-color: #222 !important;
+}
+
 .updateSettingCrossUserWarningContainer {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 0 0 1px #4040405c inset !important;
 }
